<resources>
    <string name="app_name">Beering</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_text">test\n</string>
    <string name="in_detail">자세히보기</string>

    <!-- 기록 페이지-->
    <string name="monthly_report">이번 달 리포트</string>
    <string name="calendar_date">%1$d년  %2$d월</string>
    <string name="alcohol_calendar">주류 캘린더</string>
    <string name="alcohol_calendar_desc">날짜를 클릭하면 기록할 수 있어요</string>

    <!--로그인-->
    <string name="login">로그인</string>
    <string name="login_welcome">비어링에 \n오신 것을 환영해요 :)</string>
    <string name="login_discription">서비스 이용을 위해 로그인해주세요.</string>
    <string name="login_id">아이디</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_kakao">카카오 로그인</string>
    <string name="login_newbie">처음이신가요?</string>
    <string name="login_lookaround">서비스 둘러보기</string>

    <!--회원가입-->
    <string name="term_description">서비스 시작 및 가입을 위해 먼저 \n 이용 약관 확인 및 정보 제공에 동의해 주세요.</string>
    <string name="join_title">비어링 서비스 회원가입</string>
    <string name="term_all_check">약관 전체동의</string>
    <string name="term_check">동의하기</string>
    <string name="term_join">회원가입</string>
    <string name="term_required">(필수)</string>
    <string name="term_optional">(선택)</string>
    <string name="term_first">비어링 서비스 이용약관</string>
    <string name="term_second">개인정보수집 및 이용동의</string>
    <string name="term_third">마케팅 정보 수신 동의</string>
    <string name="complete_semititle">회원 가입 완료!</string>
    <string name="complete_title">%1$s 님, \n 가입을 축하해요!</string>


    <string name="long_text">‘종달(終達)’은 맨 끝에 있는 땅, 제주목의 동쪽 끝 마을, 또는 종처럼 생긴 지미봉(地尾峰)[165.3m] 인근에 생긴 마을이라는 뜻이라고 한다. 원래 종달은 종다릿개[終達浦]라는 포구 이름에서 유래한 것으로 보이며 주민들은 종다리 또는 종달이라 부른다.
    종달리는 한라산 동쪽 끝 해안가에 위치한다. 해발 고도 250m에 이르는 남쪽에서부터 북쪽 해안까지 길게 뻗어 있다. 남에서 북으로 동거문오름[340m], 손자봉(孫子峯)[255.8m], 용눈이오름[247.8m], 은월봉[197.6m]이 연이어 있으며, 해안가에는 바로 남쪽에 마을을 끼고 지미봉이 솟아 있다. 북쪽에는 넓은 모래 해안이 펼쳐진다.</string>
    <string name="in_detail"><u>자세히보기</u></string>
    <string name="edit_profile"><u>프로필 편집</u></string>
</resources>