<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/parent_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="27dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/parent_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="27dp"/>

    <include
        layout="@layout/layout_titlebar_with_backbtn"
        android:id="@+id/term_header_cl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/term_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="비어링 서비스 회원가입"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:fontFamily="@font/pretendard_bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/term_header_cl"
        app:layout_constraintEnd_toEndOf="@id/term_header_cl"
        app:layout_constraintTop_toTopOf="@id/term_header_cl"
        app:layout_constraintBottom_toBottomOf="@id/term_header_cl"/>

    <TextView
        android:id="@+id/term_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_description"
        android:layout_marginTop="77dp"
        android:textSize="14sp"
        android:textColor="@color/gray01"
        android:fontFamily="@font/pretendard_regular"
        app:layout_constraintStart_toStartOf="@id/parent_start"
        app:layout_constraintTop_toBottomOf="@id/term_header_cl"/>

    <LinearLayout
        android:id="@+id/term_check_all_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/parent_start"
        app:layout_constraintTop_toBottomOf="@id/term_description_tv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_all_check"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/pretendard_semibold"/>

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/ic_arrow_left"
            android:scaleX="-1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>

    </LinearLayout>
    
    <CheckBox
        android:id="@+id/term_check_all_cb"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:button="@drawable/selector_checkbox"
        app:layout_constraintEnd_toEndOf="@id/parent_end"
        app:layout_constraintTop_toTopOf="@id/term_check_all_ll"
        app:layout_constraintBottom_toBottomOf="@id/term_check_all_ll"/>

    <View
        android:id="@+id/term_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray01"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@id/term_check_all_ll"
        app:layout_constraintStart_toStartOf="@id/parent_start"
        app:layout_constraintEnd_toEndOf="@id/parent_end"/>

    <LinearLayout
        android:id="@+id/term_first_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/parent_start"
        app:layout_constraintTop_toBottomOf="@id/term_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_required"
            android:textColor="@color/beering_red"
            android:textSize="12sp"
            android:fontFamily="@font/pretendard_semibold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_first"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            android:fontFamily="@font/pretendard_semibold"/>

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/ic_arrow_left"
            android:scaleX="-1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/term_second_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/parent_start"
        app:layout_constraintTop_toBottomOf="@id/term_first_ll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_required"
            android:textColor="@color/beering_red"
            android:textSize="12sp"
            android:fontFamily="@font/pretendard_semibold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_second"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            android:fontFamily="@font/pretendard_semibold"/>

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/ic_arrow_left"
            android:scaleX="-1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/term_third_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/parent_start"
        app:layout_constraintTop_toBottomOf="@id/term_second_ll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_optional"
            android:textColor="@color/gray01"
            android:textSize="12sp"
            android:fontFamily="@font/pretendard_semibold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_third"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:textSize="12sp"
            android:fontFamily="@font/pretendard_semibold"/>

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/ic_arrow_left"
            android:scaleX="-1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/term_check_first_cb"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:button="@drawable/selector_checkbox"
        app:layout_constraintEnd_toEndOf="@id/parent_end"
        app:layout_constraintTop_toTopOf="@id/term_first_ll"
        app:layout_constraintBottom_toBottomOf="@id/term_first_ll"/>

    <CheckBox
        android:id="@+id/term_check_second_cb"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:button="@drawable/selector_checkbox"
        app:layout_constraintEnd_toEndOf="@id/parent_end"
        app:layout_constraintTop_toTopOf="@id/term_second_ll"
        app:layout_constraintBottom_toBottomOf="@id/term_second_ll"/>

    <CheckBox
        android:id="@+id/term_check_third_cb"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:button="@drawable/selector_checkbox"
        app:layout_constraintEnd_toEndOf="@id/parent_end"
        app:layout_constraintTop_toTopOf="@id/term_third_ll"
        app:layout_constraintBottom_toBottomOf="@id/term_third_ll"/>

</androidx.constraintlayout.widget.ConstraintLayout>