<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <ImageView
        android:id="@+id/complete_check_iv"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/ic_check_with_circle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/complete_semititle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/complete_semititle"
        android:textColor="@color/black"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@id/complete_check_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/complete_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/complete_title"
        android:textColor="@color/black"
        android:layout_marginTop="75dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/complete_semititle_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="7dp"
        android:layout_height="16dp"
        android:background="@color/beering_yellow"
        android:layout_marginTop="93dp"
        android:layout_marginStart="59dp"
        android:rotation="240"
        app:layout_constraintTop_toBottomOf="@id/complete_semititle_tv"
        app:layout_constraintStart_toEndOf="@id/complete_semititle_tv"/>

    <View
        android:layout_width="6dp"
        android:layout_height="14dp"
        android:background="@color/beering_yellow"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="37dp"
        android:rotation="340"
        app:layout_constraintTop_toBottomOf="@id/complete_semititle_tv"
        app:layout_constraintEnd_toStartOf="@id/complete_semititle_tv"/>

    <View
        android:layout_width="5dp"
        android:layout_height="10dp"
        android:background="#E338FF"
        android:layout_marginTop="53dp"
        android:layout_marginStart="39dp"
        android:rotation="330"
        app:layout_constraintTop_toBottomOf="@id/complete_semititle_tv"
        app:layout_constraintStart_toEndOf="@id/complete_semititle_tv"/>

    <View
        android:layout_width="6dp"
        android:layout_height="13dp"
        android:background="#E338FF"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="103dp"
        android:rotation="36"
        app:layout_constraintTop_toBottomOf="@id/complete_semititle_tv"
        app:layout_constraintEnd_toStartOf="@id/complete_semititle_tv"/>

    <View
        android:layout_width="5dp"
        android:layout_height="12dp"
        android:background="#38DBFF"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="47dp"
        android:rotation="274"
        app:layout_constraintTop_toBottomOf="@id/complete_semititle_tv"
        app:layout_constraintEnd_toStartOf="@id/complete_semititle_tv"/>

    <View
        android:layout_width="7dp"
        android:layout_height="16dp"
        android:background="#38DBFF"
        android:layout_marginTop="133dp"
        android:layout_marginStart="109dp"
        android:rotation="82"
        app:layout_constraintTop_toBottomOf="@id/complete_semititle_tv"
        app:layout_constraintStart_toEndOf="@id/complete_semititle_tv"/>

    <ImageView
        android:id="@+id/complete_login_iv"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:src="@drawable/btn_join_next_on"
        android:layout_marginBottom="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="18sp"
        android:elevation="1dp"
        android:fontFamily="@font/pretendard_semibold"
        app:layout_constraintStart_toStartOf="@id/complete_login_iv"
        app:layout_constraintEnd_toEndOf="@id/complete_login_iv"
        app:layout_constraintTop_toTopOf="@id/complete_login_iv"
        app:layout_constraintBottom_toBottomOf="@id/complete_login_iv"/>

</androidx.constraintlayout.widget.ConstraintLayout>